--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ html{
     font-size: 62.5%;
 }
 
+
 .header-container{
     width: 100vw;
-    height: 10vh;
+    height: 20vh;
     background-color: royalblue;
     display: flex;
     align-items: center;    
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
     
    
 }
@@ -47,4 +49,40 @@ h1{
  
 }
 
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+.boxex{
+    width: 20rem;
+    height: 30rem;
+    min-width: 20rem;
+    background-color: black;
+    border:gray outset ;
+    margin: 1.6rem;
+   border-radius: 20rem;
+    padding: 1.6rem;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+    
+    
+}
 
+.mainImg{
+    width: 30%;
+    height: 20%;
+    border-radius: 20rem;
+    background-color: white;
+}
+.txtTarget{
+    width: 100%;
+    height: 80%;
+    color: white;
+    text-align: justify;
+    padding: 1.6rem;
+    
+}
