--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ nav li a{
  
 }
 
+main{
+    background-color: silver;
+   
+}
 .historyContent{
     display: flex;
     flex-wrap: wrap;
@@ -62,7 +66,7 @@ nav li a{
     padding: 1.6rem;
     text-align: justify;  
     font-size: 1.6rem; 
-    margin: 1rem;
+    
 }
 hr{
     width: 100%;
@@ -79,13 +83,13 @@ hr{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    margin: 1rem;
+    /* margin: 1rem; */
     padding: 1.6rem;
 }
 
 .boxex{
-    width: 20rem;
-    height: 30rem;
+    width: 25rem;
+    height: 35rem;
     min-width: 20rem;
     background-color: black;
     border:gray outset ;
@@ -100,10 +104,15 @@ hr{
 }
 
 .mainImg{
-    width: 30%;
-    height: 20%;
+    width: 40%;
+    height: 30%;
     border-radius: 20rem;
     background-color: white;
+}
+
+.mainImg img{
+    width: 100%;
+    height: 100%;
 }
 .txtTarget{
     width: 100%;
@@ -114,3 +123,28 @@ hr{
     font-size: 1.4rem;
     
 }
+
+footer{
+    width: 100vw;
+    height: 15vh;
+    background-color: royalblue;
+    display: flex;
+    align-items: center;    
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0 2rem;
+}
+
+
+footer img{
+    width: 100%;
+    height: 100%;
+    
+}
+ .twitter, .imstagran ,.facebook{
+    width: 15%;
+    height: 40%;
+    max-width: 40px;
+    border-radius: 20rem;
+    
+} 
