--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ html{
 
 .header-container{
     width: 100vw;
-    height: 20vh;
+    height: 25vh;
     background-color: royalblue;
     display: flex;
+    flex-direction: column;
     align-items: center;    
     justify-content: space-around;
     flex-wrap: wrap;
@@ -22,11 +23,18 @@ html{
 }
 
 .logoImg{
-    width: 30px;
-    height: 5vh;
-    margin: 1rem;
+    width: 15vh;
+    height: 10vh;
+   
+    
 }
 
+.logoImg img{
+    width: 60px;
+    height: 60px;
+    max-width: 60px;
+    
+}
 ul{
     display: flex;
     
